--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
 
     <div id="uk-offcanvas-content">
 		<div ng-include="'views/partials/_navbar.html'"></div>
-		<span uk-spinner="ratio: 3" ng-if="$root.showLoader" class="uk-width-1-1 uk-text-center uk-margin"></span>
+		<span uk-spinner ng-if="$root.showLoader" class="uk-width-1-1 uk-text-center uk-margin"></span>
 		<div id="view" ng-view="" ng-if="!$root.showLoader"></div>
 		<!-- This is the off-canvas -->
 		<div id="side-menu" uk-offcanvas ng-controller="NavCtrl">
@@ -36,13 +36,13 @@
 			<button class="uk-offcanvas-close" type="button" uk-close></button>
             <usercard id="user"></usercard>
 			<ul class="uk-nav-default uk-nav-parent-icon uk-position-bottom uk-padding" uk-nav>
-				<li ng-repeat="(key , nav) in navSettings" ng-if="!nav.disabled && $root.user.access_level.id >= nav.access_level" ng-class="nav.children ? 'uk-parent' : ''">
+				<li ng-repeat="(key , nav) in navSettings" ng-if="!nav.disabled && user.access_level.id >= nav.access_level" ng-class="nav.children ? 'uk-parent' : ''">
 					<a ng-href="#!/{{ nav.url }}">
 						<span class="uk-margin-small-right" uk-icon="icon: {{ nav.icon }}"></span> 
 						{{ key | uppercase }}
 					</a>
 					<ul class="uk-nav-sub" ng-if="nav.children">
-						<li ng-repeat="(childKey,child) in nav.children" ng-if="$root.user.access_level.id >= child.access_level">
+						<li ng-repeat="(childKey,child) in nav.children" ng-if="user.access_level.id >= child.access_level">
 							<a ng-href="#!/{{ child.url }}">
 								<span class="uk-margin-small-right" uk-icon="icon: {{ child.icon }}"></span>
 								{{ childKey | uppercase }}
@@ -50,9 +50,9 @@
 						</li>
 					</ul>
 				</li>
-				<li class="uk-nav-divider" ng-if="auth.isAuthenticated() && $root.user.access_level.id >= 2"></li>
-                <li ng-if="auth.isAuthenticated() && $root.user.access_level.id >= 3"><a ng-href="#!/tools" class="uk-text-uppercase"><span class="uk-margin-small-right" uk-icon="icon: bolt"></span> tools</a></li>
-                <li ng-if="auth.isAuthenticated() && $root.user.access_level.id >= 3"><a ng-href="#!/settings" class="uk-text-uppercase"><span class="uk-margin-small-right" uk-icon="icon: cog"></span> settings</a></li>
+				<li class="uk-nav-divider" ng-if="auth.isAuthenticated() && user.access_level.id >= 2"></li>
+                <li ng-if="auth.isAuthenticated() && user.access_level.id >= 3"><a ng-href="#!/tools" class="uk-text-uppercase"><span class="uk-margin-small-right" uk-icon="icon: bolt"></span> tools</a></li>
+                <li ng-if="auth.isAuthenticated() && user.access_level.id >= 3"><a ng-href="#!/settings" class="uk-text-uppercase"><span class="uk-margin-small-right" uk-icon="icon: cog"></span> settings</a></li>
                 <li ng-if="auth.isAuthenticated()" class="uk-text-uppercase">
                     <a href="#!/profile/settings/">
                     <span class="uk-margin-small-right" uk-icon="icon: user"></span>
