add spinner directive and initialize search filter

--- a/app/index.html
+++ b/app/index.html
@@ -164,6 +164,7 @@
         <script src="scripts/factories/uikit3.js"></script>
         <script src="scripts/factories/sweetalert.js"></script>
         <script src="scripts/directives/searchfilter.js"></script>
+        <script src="scripts/directives/spinner.js"></script>
         <!-- endbuild -->
 		
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.30/js/uikit.min.js"></script>
