--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,37 @@
 		    <div class="uk-offcanvas-bar uk-offcanvas-bar-animation uk-offcanvas-slide">
 
 			<button class="uk-offcanvas-close" type="button" uk-close></button>
-
+            <user-pill user="user" name="true" label="user.user_type.name || user.access_level.name"></user-pill>
+            
+			<ul class="uk-nav-default uk-nav-parent-icon uk-position-bottom uk-padding" uk-nav>
+				<li ng-repeat="(key , nav) in navSettings" ng-if="!nav.disabled && user.access_level.id >= nav.access_level" ng-class="nav.children ? 'uk-parent' : ''">
+					<a ng-href="#!/{{ nav.url }}">
+						<span class="uk-margin-small-right" uk-icon="icon: {{ nav.icon }}"></span> 
+						{{ key | uppercase }}
+					</a>
+					<ul class="uk-nav-sub" ng-if="nav.children">
+						<li ng-repeat="(childKey,child) in nav.children" ng-if="user.access_level.id >= child.access_level">
+							<a ng-href="#!/{{ child.url }}">
+								<span class="uk-margin-small-right" uk-icon="icon: {{ child.icon }}"></span>
+								{{ childKey | uppercase }}
+							</a>
+						</li>
+					</ul>
+				</li>
+				<li class="uk-nav-divider" ng-if="auth.isAuthenticated() && user.access_level.id >= 2"></li>
+                <li ng-if="auth.isAuthenticated() && user.access_level.id >= 3"><a ng-href="#!/tools" class="uk-text-uppercase"><span class="uk-margin-small-right" uk-icon="icon: bolt"></span> tools</a></li>
+                <li ng-if="auth.isAuthenticated() && user.access_level.id >= 3"><a ng-href="#!/settings" class="uk-text-uppercase"><span class="uk-margin-small-right" uk-icon="icon: cog"></span> settings</a></li>
+                <li ng-if="auth.isAuthenticated()" class="uk-text-uppercase">
+                    <a href="#!/profile/settings/">
+                    <span class="uk-margin-small-right" uk-icon="icon: user"></span>
+                    My Account</a>
+                </li>
+                <li ng-if="auth.isAuthenticated()" class="uk-text-uppercase"> 
+                    <a ng-click="logout()" data-target="#signout">
+                    <span class="uk-margin-small-right" uk-icon="icon: sign-out"></span>
+                    Sign Out</a>
+                </li>
+			</ul>
 		  </div>
 		</div>
     </div>
