--- a/app/index.html
+++ b/app/index.html
@@ -168,6 +168,7 @@
         <script src="scripts/directives/spinner.js"></script>
         <script src="scripts/directives/instructorcourses.js"></script>
         <script src="scripts/directives/letterthumb.js"></script>
+        <script src="scripts/directives/stat-card.js"></script>
         <!-- endbuild -->
 		
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.30/js/uikit.min.js"></script>
