add linq.js and use it to group data on the dashboard

--- a/app/index.html
+++ b/app/index.html
@@ -100,6 +100,7 @@
     <script src="bower_components/papaparse/papaparse.js"></script>
     <script src="bower_components/chart.js/dist/Chart.js"></script>
     <script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
+    <script src="bower_components/angular-linq/angular-linq.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <script src="https://cdn.jsdelivr.net/satellizer/0.15.5/satellizer.min.js"></script>
