style student and instructor courses

--- a/app/index.html
+++ b/app/index.html
@@ -170,6 +170,7 @@
         <script src="scripts/directives/instructorcourses.js"></script>
         <script src="scripts/directives/letterthumb.js"></script>
         <script src="scripts/directives/stat-card.js"></script>
+        <script src="scripts/services/dashboardconst.js"></script>
         <!-- endbuild -->
 		
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.30/js/uikit.min.js"></script>
