format user subtitles when rendering tables

--- a/app/index.html
+++ b/app/index.html
@@ -171,6 +171,7 @@
         <script src="scripts/services/dashboardconst.js"></script>
         <script src="scripts/directives/tabs.js"></script>
         <script src="scripts/services/notifications.js"></script>
+        <script src="scripts/directives/list.js"></script>
         <!-- endbuild -->
 		
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.30/js/uikit.min.js"></script>
