add html-bind-comiple and stage plugin for dynamic templates

--- a/app/index.html
+++ b/app/index.html
@@ -98,6 +98,7 @@
     <script src="bower_components/angular-chart.js/dist/angular-chart.js"></script>
     <script src="bower_components/angular-linq/angular-linq.js"></script>
     <script src="bower_components/pusher-angular/lib/pusher-angular.js"></script>
+    <script src="bower_components/angular-bind-html-compile/angular-bind-html-compile.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <script src="https://cdn.jsdelivr.net/satellizer/0.15.5/satellizer.min.js"></script>
