--- a/app/index.html
+++ b/app/index.html
@@ -174,6 +174,7 @@
         <script src="scripts/services/notifications.js"></script>
         <script src="scripts/directives/list.js"></script>
         <script src="scripts/directives/pagination.js"></script>
+        <script src="scripts/directives/coursecard.js"></script>
         <!-- endbuild -->
 		
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.30/js/uikit.min.js"></script>
